--- a/src/app/system/modals/role-add/role-add.component.html
+++ b/src/app/system/modals/role-add/role-add.component.html
@@ -14,8 +14,7 @@
             <label class="form-control-label">上级角色:</label>
             <select class="form-control custom-select rounded-0" name="parent" [(ngModel)]="role.parentid" name="type" required>
                 <option value="0">无上级角色</option>
-                <option value="1">超级管理员</option>
-                <option value="2">普通管理员</option>
+                <option *ngFor="let item of roles" value="{{item.id}}">{{item.name}}</option>
             </select>
         </div>
         <div class="form-group">
@@ -31,12 +30,6 @@
                     <md-slide-toggle *ngFor="let permission of getPermissionsByModel(model.id)" color="warn" (change)="reversePermission(permission.id)" [checked]="hasPermission(permission.id)">
                         <span [ngClass]="{'text-danger': hasPermission(permission.id),'text-muted':!hasPermission(permission.id)}">{{permission.name}}</span>
                     </md-slide-toggle>
-                    <!-- <md-slide-toggle color="warn" (change)="reversePermission(2)" [checked]="hasPermission(2)">
-                        <span [ngClass]="{'text-danger': hasPermission(2),'text-muted':!hasPermission(2)}">角色管理</span>
-                    </md-slide-toggle>
-                    <md-slide-toggle color="warn" (change)="reversePermission(3)" [checked]="hasPermission(3)">
-                        <span [ngClass]="{'text-danger': hasPermission(3),'text-muted':!hasPermission(3)}">权限分配</span>
-                    </md-slide-toggle> -->
                 </div>
             </div>
         </div>
