--- a/src/app/system/pages/admin-manager/admin-manager.component.html
+++ b/src/app/system/pages/admin-manager/admin-manager.component.html
@@ -1,21 +1,23 @@
 <div class="card">
     <div class="card-header">账户管理</div>
     <div class="card-body p-1">
-        <table class="table table-bordered table-hover">
+        <table class="table table-striped table-hover">
             <thead>
                 <tr>
-                    <th>#</th>
-                    <th>Column heading</th>
-                    <th>Column heading</th>
-                    <th>Column heading</th>
+                    <th *ngFor="let th of pageConfig.table">{{th.name}}</th>
+                    <th>操作</th>
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>Column content</td>
-                    <td>Column content</td>
-                    <td>Column content</td>
+                <tr *ngFor="let item of admins;index as i">
+                    <td *ngFor="let td of pageConfig.table">
+                        <img loading *ngIf="td.type=='image'" src="{{(td.uri||'')+item[td.key]}}">
+                        <span *ngIf="td.type!='image'">{{(td.key=='i'?i+1:item[td.key])||'未设置'}}</span>
+                    </td>
+                    <td>
+                        <button class="btn btn-sm btn-info">编辑</button>
+                        <button class="btn btn-sm btn-danger">删除</button>
+                    </td>
                 </tr>
             </tbody>
         </table>
