add admin add modal

--- a/src/app/system/modals/admin-change/admin-change.component.html
+++ b/src/app/system/modals/admin-change/admin-change.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <h5 class="modal-title" id="exampleModalLabel">@添加账户</h5>
+    <h5 class="modal-title" id="exampleModalLabel">{{title||'未设置'}}@编辑账户</h5>
     <button type="button" class="close pointer" (click)="close()" aria-label="Close">
       <span aria-hidden="true">&times;</span>
   </button>
@@ -9,8 +9,8 @@
         <ng-template ngFor let-item [ngForOf]="config" let-i="index">
             <div class="form-group" [ngSwitch]="item.type">
                 <label class="form-control-label">{{item.name}}:</label>
-                <input *ngSwitchCase="'text'" class="form-control rounded-0" type="text" id="recipient-name" name="{{item.key}}" [(ngModel)]="admin[item.key]" placeholder="请输入{{item.name}}" required>
-                <textarea *ngSwitchCase="'textarea'" type="text" class="form-control rounded-0" id="recipient-name" name="{{item.key}}" [(ngModel)]="admin[item.key]" placeholder="请输入{{item.name}}" required></textarea>
+                <input *ngSwitchCase="'text'" class="form-control rounded-0" type="text" id="recipient-name" name="{{item.key}}" [(ngModel)]="admin[item.key]" placeholder="{{item.placeholder||'请输入'+item.name}}" required>
+                <textarea *ngSwitchCase="'textarea'" type="text" class="form-control rounded-0" id="recipient-name" name="{{item.key}}" [(ngModel)]="admin[item.key]" placeholder="{{item.placeholder||'请输入'+item.name}}" required></textarea>
                 <app-image-input-form *ngSwitchCase="'image'" [image]="admin[item.key]" [imageStyle]="{ 'width': '100px', 'height': '100px','border':'none' }" openBtnClassName="btn btn-outline-secondary btn-sm rounded-0" removeBtnClassName="d-none" resetBtnClassName="d-none">
                 </app-image-input-form>
             </div>
@@ -19,5 +19,5 @@
 </div>
 <div class="modal-footer">
     <button type="button" class="btn btn-secondary" (click)="close()"><span>取消/返回</span></button>
-    <button type="button" [disabled]="!changeForm.form.valid" loading title="确认修改" class="btn btn-success" #button="btnLoading" (click)="addAdmin(button)"></button>
+    <button type="button" [disabled]="!changeForm.form.valid" loading title="确认修改" class="btn btn-success" #button="btnLoading" (click)="changeAdmin(button)"></button>
 </div>
