--- a/src/app/system/modals/admin-add/admin-add.component.html
+++ b/src/app/system/modals/admin-add/admin-add.component.html
@@ -9,8 +9,8 @@
         <ng-template ngFor let-item [ngForOf]="config" let-i="index">
             <div class="form-group" [ngSwitch]="item.type">
                 <label class="form-control-label">{{item.name}}:</label>
-                <input *ngSwitchCase="'text'" class="form-control rounded-0" type="text" id="recipient-name" name="{{item.key}}" [(ngModel)]="admin[item.key]" placeholder="{{item.placeholder||'请输入'+item.name}}" [required]="item.required!=false||false">
-                <textarea *ngSwitchCase="'textarea'" type="text" class="form-control rounded-0" id="recipient-name" name="{{item.key}}" [(ngModel)]="admin[item.key]" placeholder="{{item.placeholder||'请输入'+item.name}}" [required]="item.required!=false||false"></textarea>
+                <input *ngSwitchCase="'text'" class="form-control rounded-0" type="text" id="recipient-name" name="{{item.key}}" [(ngModel)]="admin[item.key]" placeholder="{{'请输入'+item.name}}" required>
+                <textarea *ngSwitchCase="'textarea'" type="text" class="form-control rounded-0" id="recipient-name" name="{{item.key}}" [(ngModel)]="admin[item.key]" placeholder="{{'请输入'+item.name}}" required></textarea>
             </div>
         </ng-template>
     </form>
