--- a/src/app/system/modals/permission-change-child/permission-change-child.component.html
+++ b/src/app/system/modals/permission-change-child/permission-change-child.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <h5 class="modal-title" id="exampleModalLabel">{{permission.name}}@编辑权限</h5>
+    <h5 class="modal-title" id="exampleModalLabel">{{title||'未设置'}}@编辑权限</h5>
     <button type="button" class="close pointer" (click)="close()" aria-label="Close">
         <span aria-hidden="true">&times;</span>
     </button>
