--- a/src/app/system/pages/admin-manager/admin-manager.component.html
+++ b/src/app/system/pages/admin-manager/admin-manager.component.html
@@ -22,10 +22,9 @@
             </tbody>
         </table>
         <div class="text-right pr-3">
-            <button (click)="showAddModal(modal)" class="btn btn-success"><i class="fa fa-plus fa-fw"></i>添加新账户</button>
+            <button (click)="showAddModal()" class="btn btn-success"><i class="fa fa-plus fa-fw"></i>添加新账户</button>
             <button class="btn btn-outline-secondary border-0 mr-3">共 {{this.page.total}} 条记录</button>
             <app-pagination class="pull-right" (pageChange)="pageChanged($event)" [ellipses]="true" [collectionSize]="this.page.total" [(page)]="this.page.page" [pageSize]="this.page.limit" [maxSize]="5"></app-pagination>
         </div>
     </div>
 </div>
-<app-modal #modal></app-modal>
