--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -23,8 +23,7 @@
     position: fixed;
     z-index: 5;
     top: 0;
-    left: 0;
-    // background-image: url('/assets/image/sidebar.jpg');
+    left: 0; // background-image: url('/assets/image/sidebar.jpg');
     overflow-y: hidden;
     overflow-x: hidden;
     box-shadow: 1px 2px 3px black;
@@ -33,4 +32,10 @@
 .app-pad-cotent {
     margin-top: 70px;
     min-width: 500px;
+}
+
+.right-side-bar {
+    background-color: white;
+    width: 300px;
+    right: 0;
 }
