--- a/src/app/system/components/headbar/headbar.component.html
+++ b/src/app/system/components/headbar/headbar.component.html
@@ -20,7 +20,7 @@
 <md-menu #menu="mdMenu">
     <div md-menu-item>
         <i class="fa fa-paint-brush fa-fw fa-lg" aria-hidden="true"></i>
-        <span>更换主题</span>
+        <span>更换系统主题</span>
     </div>
     <div md-menu-item>
         <i class="fa fa-file-text-o fa-fw fa-lg" aria-hidden="true"></i>
