--- a/src/app/system/components/menu/menu.component.html
+++ b/src/app/system/components/menu/menu.component.html
@@ -6,16 +6,16 @@
     <hr class="menu-line">
     <div class="menu-manager">
         <div class="menu-manager-title" (click)="isCollopseArray[0]=!isCollopseArray[0]">
-            <img width="40" height="40" class="avatar ml-3 mr-3 rounded-circle" src="/assets/image/avatar/4.jpg">
-            <span>hello1024</span>
+            <img width="40" height="40" class="avatar mt-2 ml-3 mr-3 rounded-circle pull-left" src="/assets/image/avatar/4.jpg">
+            <span class="d-inline-block text-truncate" style="width:170px;">{{user.email}}</span>
             <i class="pull-right fa fa-caret-down right-icon mr-3" [ngClass]="{'icon-up': isCollopseArray[0],'icon-down':!isCollopseArray[0]}"></i>
         </div>
         <div class="menu-block" *ngIf="isCollopseArray[0]">
             <div class="menu-manager-item pl-4 hover-item">
                 <i class="fa fa-user-circle icon"></i>
-                <span class="ml-4">店铺管理员</span>
+                <span class="ml-4">{{user.role}}</span>
             </div>
-            <div class="menu-manager-item pl-4 hover-item">
+            <div (click)="openAccountSettingPad()" class="menu-manager-item pl-4 hover-item">
                 <i class="fa fa-info-circle icon"></i>
                 <span class="ml-4">账户设置</span>
             </div>
