add datepicker test

--- a/src/app/system/pages/admin-manager/admin-manager.component.html
+++ b/src/app/system/pages/admin-manager/admin-manager.component.html
@@ -1,3 +1,7 @@
+<nav class="breadcrumb-pad p-0 m-0">
+    <a class="breadcrumb-item" routerLink="/"><i class="fa fa-home fa-fw fa-lg" aria-hidden="true"></i>首页</a>
+    <span class="breadcrumb-item active"><i class="fa fa-user-circle fa-fw fa-lg" aria-hidden="true"></i>账户管理</span>
+</nav>
 <div class="card">
     <div class="card-header">账户管理</div>
     <div class="card-body p-1">
