--- a/src/app/system/pages/home/home.component.html
+++ b/src/app/system/pages/home/home.component.html
@@ -5,11 +5,11 @@
     <div class="col-lg-4">
         <md-card class="card-border mb-3">
             <md-card-header>
-                <img md-card-avatar src="assets/image/avatar/6.jpg">
+                <img md-card-avatar src="http://hello1024.oss-cn-beijing.aliyuncs.com/ng-dashboard/assets/image/avatar/6.jpg">
                 <md-card-title>Shiba Inu</md-card-title>
                 <md-card-subtitle>Dog Breed</md-card-subtitle>
             </md-card-header>
-            <img md-card-image src="assets/image/card/5.jpg">
+            <img md-card-image src="http://hello1024.oss-cn-beijing.aliyuncs.com/ng-dashboard/assets/image/card/5.jpg">
             <md-card-content>
                 <p>
                     The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan. A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally bred for hunting.
@@ -24,11 +24,11 @@
     <div class="col-lg-4">
         <md-card class="card-border mb-3">
             <md-card-header>
-                <img md-card-avatar src="assets/image/avatar/5.jpg">
+                <img md-card-avatar src="http://hello1024.oss-cn-beijing.aliyuncs.com/ng-dashboard/assets/image/avatar/5.jpg">
                 <md-card-title>Shiba Inu</md-card-title>
                 <md-card-subtitle>Dog Breed</md-card-subtitle>
             </md-card-header>
-            <img md-card-image src="assets/image/card/4.jpg">
+            <img md-card-image src="http://hello1024.oss-cn-beijing.aliyuncs.com/ng-dashboard/assets/image/card/4.jpg">
             <md-card-content>
                 <p>
                     The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan. A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally bred for hunting.
@@ -44,11 +44,11 @@
     <div class="col-lg-4">
         <md-card class="card-border">
             <md-card-header>
-                <img md-card-avatar src="assets/image/avatar/1.jpg">
+                <img md-card-avatar src="http://hello1024.oss-cn-beijing.aliyuncs.com/ng-dashboard/assets/image/avatar/1.jpg">
                 <md-card-title>Shiba Inu</md-card-title>
                 <md-card-subtitle>Dog Breed</md-card-subtitle>
             </md-card-header>
-            <img md-card-image src="assets/image/card/3.jpg">
+            <img md-card-image src="http://hello1024.oss-cn-beijing.aliyuncs.com/ng-dashboard/assets/image/card/3.jpg">
             <md-card-content>
                 <p>
                     The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan. A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally bred for hunting.
@@ -76,7 +76,7 @@
                 <tbody>
                     <tr>
                         <td>
-                            <img src="/assets/image/avatar/1.jpg" />
+                            <img src="http://hello1024.oss-cn-beijing.aliyuncs.com/ng-dashboard/assets/image/avatar/1.jpg" />
                         </td>
                         <td>Mark</td>
                         <td>
@@ -96,7 +96,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <img src="/assets/image/avatar/2.jpg" />
+                            <img src="http://hello1024.oss-cn-beijing.aliyuncs.com/ng-dashboard/assets/image/avatar/2.jpg" />
                         </td>
                         <td>Jacob</td>
                         <td>
@@ -116,7 +116,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <img src="/assets/image/avatar/3.jpg" />
+                            <img src="http://hello1024.oss-cn-beijing.aliyuncs.com/ng-dashboard/assets/image/avatar/3.jpg" />
                         </td>
                         <td>Larry</td>
                         <td>
@@ -136,7 +136,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <img src="/assets/image/avatar/4.jpg" />
+                            <img src="http://hello1024.oss-cn-beijing.aliyuncs.com/ng-dashboard/assets/image/avatar/4.jpg" />
                         </td>
                         <td>Sorry</td>
                         <td>
@@ -156,7 +156,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <img src="/assets/image/avatar/5.jpg" />
+                            <img src="http://hello1024.oss-cn-beijing.aliyuncs.com/ng-dashboard/assets/image/avatar/5.jpg" />
                         </td>
                         <td>Karven</td>
                         <td>
@@ -192,7 +192,7 @@
                 <tbody>
                     <tr>
                         <td>
-                            <img src="/assets/image/avatar/1.jpg" />
+                            <img src="http://hello1024.oss-cn-beijing.aliyuncs.com/ng-dashboard/assets/image/avatar/1.jpg" />
                         </td>
                         <td>Mark</td>
                         <td>
@@ -212,7 +212,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <img src="/assets/image/avatar/2.jpg" />
+                            <img src="http://hello1024.oss-cn-beijing.aliyuncs.com/ng-dashboard/assets/image/avatar/2.jpg" />
                         </td>
                         <td>Jacob</td>
                         <td>
@@ -232,7 +232,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <img src="/assets/image/avatar/3.jpg" />
+                            <img src="http://hello1024.oss-cn-beijing.aliyuncs.com/ng-dashboard/assets/image/avatar/3.jpg" />
                         </td>
                         <td>Larry</td>
                         <td>
@@ -252,7 +252,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <img src="/assets/image/avatar/4.jpg" />
+                            <img src="http://hello1024.oss-cn-beijing.aliyuncs.com/ng-dashboard/assets/image/avatar/4.jpg" />
                         </td>
                         <td>Sorry</td>
                         <td>
@@ -272,7 +272,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <img src="/assets/image/avatar/5.jpg" />
+                            <img src="http://hello1024.oss-cn-beijing.aliyuncs.com/ng-dashboard/assets/image/avatar/5.jpg" />
                         </td>
                         <td>Karven</td>
                         <td>
@@ -310,7 +310,7 @@
             <div class="card-body">
                 <md-nav-list>
                     <md-list-item>
-                        <img md-list-avatar src="/assets/image/avatar/1.jpg" alt="...">
+                        <img md-list-avatar src="http://hello1024.oss-cn-beijing.aliyuncs.com/ng-dashboard/assets/image/avatar/1.jpg" alt="...">
                         <h3 md-line> Jack </h3>
                         <p md-line>
                             <span> Golf weekend </span>
@@ -318,7 +318,7 @@
                         </p>
                     </md-list-item>
                     <md-list-item>
-                        <img md-list-avatar src="/assets/image/avatar/2.jpg" alt="...">
+                        <img md-list-avatar src="http://hello1024.oss-cn-beijing.aliyuncs.com/ng-dashboard/assets/image/avatar/2.jpg" alt="...">
                         <h3 md-line> James </h3>
                         <p md-line>
                             <span> Party ?</span>
@@ -326,7 +326,7 @@
                         </p>
                     </md-list-item>
                     <md-list-item>
-                        <img md-list-avatar src="/assets/image/avatar/3.jpg" alt="...">
+                        <img md-list-avatar src="http://hello1024.oss-cn-beijing.aliyuncs.com/ng-dashboard/assets/image/avatar/3.jpg" alt="...">
                         <h3 md-line> Cody </h3>
                         <p md-line>
                             <span> Code Quality </span>
@@ -334,7 +334,7 @@
                         </p>
                     </md-list-item>
                     <md-list-item>
-                        <img md-list-avatar src="/assets/image/avatar/4.jpg" alt="...">
+                        <img md-list-avatar src="http://hello1024.oss-cn-beijing.aliyuncs.com/ng-dashboard/assets/image/avatar/4.jpg" alt="...">
                         <h3 md-line> Jessica </h3>
                         <p md-line>
                             <span> Love you... </span>
@@ -359,7 +359,7 @@
             <div class="card-body">
                 <md-nav-list>
                     <md-list-item>
-                        <img md-list-avatar src="/assets/image/avatar/1.jpg" alt="...">
+                        <img md-list-avatar src="http://hello1024.oss-cn-beijing.aliyuncs.com/ng-dashboard/assets/image/avatar/1.jpg" alt="...">
                         <h3 md-line> Jack </h3>
                         <p md-line>
                             <span> Golf weekend </span>
@@ -367,7 +367,7 @@
                         </p>
                     </md-list-item>
                     <md-list-item>
-                        <img md-list-avatar src="/assets/image/avatar/2.jpg" alt="...">
+                        <img md-list-avatar src="http://hello1024.oss-cn-beijing.aliyuncs.com/ng-dashboard/assets/image/avatar/2.jpg" alt="...">
                         <h3 md-line> James </h3>
                         <p md-line>
                             <span> Party ?</span>
@@ -375,7 +375,7 @@
                         </p>
                     </md-list-item>
                     <md-list-item>
-                        <img md-list-avatar src="/assets/image/avatar/3.jpg" alt="...">
+                        <img md-list-avatar src="http://hello1024.oss-cn-beijing.aliyuncs.com/ng-dashboard/assets/image/avatar/3.jpg" alt="...">
                         <h3 md-line> Cody </h3>
                         <p md-line>
                             <span> Code Quality </span>
@@ -383,7 +383,7 @@
                         </p>
                     </md-list-item>
                     <md-list-item>
-                        <img md-list-avatar src="/assets/image/avatar/4.jpg" alt="...">
+                        <img md-list-avatar src="http://hello1024.oss-cn-beijing.aliyuncs.com/ng-dashboard/assets/image/avatar/4.jpg" alt="...">
                         <h3 md-line> Jessica </h3>
                         <p md-line>
                             <span> Love you... </span>
