--- a/src/app/system/pages/permission-manager/permission-manager.component.html
+++ b/src/app/system/pages/permission-manager/permission-manager.component.html
@@ -4,7 +4,7 @@
 </nav>
 <div class="card">
     <div class="card-header">
-        <span class="text-primary"><i class="fa fa-lock fa-fw fa-lg"></i>权限分配</span>
+        <span>权限分配</span>
     </div>
     <div class="card-body p-1">
         <table class="table table-bordered">
