--- a/src/app/system/components/headbar/headbar.component.html
+++ b/src/app/system/components/headbar/headbar.component.html
@@ -23,11 +23,11 @@
         <span>更换系统主题</span>
     </div>
     <div md-menu-item>
-        <i class="fa fa-file-text-o fa-fw fa-lg" aria-hidden="true"></i>
+        <i class="fa fa-file-text fa-fw fa-lg" aria-hidden="true"></i>
         <span>浏览接口文档</span>
     </div>
     <div md-menu-item>
-        <i class="fa fa-trash-o fa-fw fa-lg" aria-hidden="true"></i>
+        <i class="fa fa-archive fa-fw fa-lg" aria-hidden="true"></i>
         <span>清空本地存储</span>
     </div>
 </md-menu>
