--- a/src/app/system/modals/account-setting/account-setting.component.html
+++ b/src/app/system/modals/account-setting/account-setting.component.html
@@ -8,16 +8,12 @@
     <form #changeForm="ngForm">
         <div class="form-group">
             <label class="form-control-label">账户:</label>
-            <input class="form-control rounded-0" type="text" value="{{user.email}}" readonly required>
+            <input class="form-control rounded-0" type="text" value="{{user.email}}" readonly>
         </div>
         <div class="form-group">
             <label class="form-control-label">新密码:</label>
-            <input class="form-control rounded-0" type="password" value="{{user.password}}" required>
+            <input class="form-control rounded-0" name="password" type="password" [(ngModel)]="password" required>
         </div>
-        <!-- <div class="form-group">
-            <label class="form-control-label">确认密码:</label>
-            <input class="form-control rounded-0" type="text" id="recipient-name" readonly required>
-        </div> -->
     </form>
 </div>
 <div class="modal-footer">
