--- a/src/app/modules/example/pages/datepicker/datepicker.component.html
+++ b/src/app/modules/example/pages/datepicker/datepicker.component.html
@@ -1,3 +1,7 @@
+<nav class="breadcrumb-pad p-0 m-0">
+    <a class="breadcrumb-item" routerLink="/"><i class="fa fa-home fa-fw fa-lg" aria-hidden="true"></i>首页</a>
+    <span class="breadcrumb-item active"><i class="fa fa-calendar-plus-o fa-fw fa-lg" aria-hidden="true"></i>日期日历</span>
+</nav>
 <div class="card rounded-0">
     <div class="card-header">单个日期选择</div>
     <div class="card-body">
