--- a/src/app/system/components/headbar/headbar.component.html
+++ b/src/app/system/components/headbar/headbar.component.html
@@ -31,9 +31,9 @@
                     </md-list-item>
                 </ng-template>
             </md-nav-list>
-            <div *ngIf="!searchIsNotEmpty()">
+            <!-- <div *ngIf="!searchIsNotEmpty()">
                 没有查询到符合的菜单
-            </div>
+            </div> -->
         </div>
     </div>
 </div>
