--- a/src/app/system/tools/components/image-input-upload/image-input-upload.component.html
+++ b/src/app/system/tools/components/image-input-upload/image-input-upload.component.html
@@ -1,7 +1,7 @@
 <input #input_file type="file" [hidden]="true" accept="image/*" (change)="changeFile(img_pad,$event.target.files)">
-<button class="{{openBtnClassName}}" (click)="input_file.click()" [innerHtml]="openTitle"></button>
-<button class="{{resetBtnClassName}}" (click)="resetInput(img_pad,input_file)" [innerHtml]="resetTitle"></button>
-<button class="{{removeBtnClassName}}" (click)="cleanInput(img_pad,input_file)" [innerHtml]="removeTitle"></button>
+<button type="button" class="{{openBtnClassName}}" (click)="input_file.click()" [innerHtml]="openTitle"></button>
+<button type="button" class="{{resetBtnClassName}}" (click)="resetInput(img_pad,input_file)" [innerHtml]="resetTitle"></button>
+<button type="button" class="{{removeBtnClassName}}" (click)="cleanInput(img_pad,input_file)" [innerHtml]="removeTitle"></button>
 <br>
 <img class="img-thumbnail mt-2" #img_pad [hidden]="(!showImage&&!image)||isLoading" src="{{image}}" [ngStyle]="imageStyle">
 <div class="span img-thumbnail mt-2" *ngIf="isLoading">
