--- a/src/app/system/tools/components/image-input-form/image-input-form.component.html
+++ b/src/app/system/tools/components/image-input-form/image-input-form.component.html
@@ -1,6 +1,6 @@
 <input #input_file type="file" [hidden]="true" accept="image/*" (change)="changeFile(img_pad,$event.target.files)">
-<button class="{{openBtnClassName}}" (click)="input_file.click()" [innerHtml]="openTitle"></button>
-<button class="{{resetBtnClassName}}" (click)="resetInput(img_pad,input_file)" [innerHtml]="resetTitle"></button>
-<button class="{{removeBtnClassName}}" (click)="cleanInput(img_pad,input_file)" [innerHtml]="removeTitle"></button>
+<button type="button" class="{{openBtnClassName}}" (click)="input_file.click()" [innerHtml]="openTitle"></button>
+<button type="button" class="{{resetBtnClassName}}" (click)="resetInput(img_pad,input_file)" [innerHtml]="resetTitle"></button>
+<button type="button" class="{{removeBtnClassName}}" (click)="cleanInput(img_pad,input_file)" [innerHtml]="removeTitle"></button>
 <br>
 <img class="img-thumbnail mt-2" #img_pad [hidden]="!showImage&&!image" src="{{image}}" [ngStyle]="imageStyle">
