--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,8 @@
 // @import "~font-awesome/css/font-awesome.min.css";
 @import '~ngx-toastr/toastr.css';
 @import 'assets/prism/themes/prism-tomorrow.css';
+@import "~froala-editor/css/froala_editor.pkgd.min.css";
+@import "~froala-editor/css/froala_style.min.css";
 
 /*default css*/
 
@@ -34,9 +36,6 @@ td img {
     width: 32px;
     border-radius: 50%;
 }
-
-
-/*default css */
 
 
 /* 设置滚动条的样式 */
@@ -169,6 +168,25 @@ div {
 .ui-select-toggle {
     background-color: white !important;
     color: black !important;
+}
+
+
+/*WYSIWYG HTML Editor*/
+
+.fr-sticky {
+    z-index: 2 !important;
+}
+
+.fr-toolbar {
+    border-top: 5px solid #C5C5C5 !important;
+}
+
+.fr-wrapper div a {
+    display: none !important;
+}
+
+.fr-wrapper div p a {
+    display: inline !important;
 }
 
 
